# struct-HospitalAbsurd

./: .clang-format  .gitignore  CMakeLists.txt  README.md
forms/: listview.ui  mainwindow.ui  newdoctor.ui  newpatient.ui  newreferral.ui  referralslist.ui  searchform.ui  searchresults.ui
lib/: database.cpp  database.hpp  statuscodes.hpp  utils.cpp  utils.hpp
lib/data/: bintree.hpp  doctor.cpp  doctor.hpp  hashtable.hpp  patient.cpp  patient.hpp  patienthashkey.cpp  patienthashkey.hpp  patienthashtable.cpp  patienthashtable.hpp  referral.cpp  referral.hpp  stack.hpp  twowaylist.hpp
lib/data/dataprocessingclasses/: bintree.hpp  hashtable.hpp  stack.hpp  twowaylist.hpp
lib/data/hospital/: doctor.cpp  doctor.hpp  patient.cpp  patient.hpp  patienthashkey.cpp  patienthashkey.hpp  referral.cpp  referral.hpp
lib/file/: datafile.cpp  datafile.hpp  dataobject.cpp  dataobject.hpp
lib/models/: doctorbintree.cpp  doctorbintree.hpp  patienthashtable.cpp  patienthashtable.hpp  referrallist.cpp  referrallist.hpp
src/: globaldatabase.hpp  main.cpp
src/Windows/: MainWindow.cpp  MainWindow.hpp  doctorlistwindow.cpp  doctorlistwindow.hpp  doctorsearchwindow.cpp  doctorsearchwindow.hpp  newdoctorwindow.cpp  newdoctorwindow.hpp  newpatientwindow.cpp  newpatientwindow.hpp  newreferralwindow.cpp  newreferralwindow.hpp  patientlistwindow.cpp  patientlistwindow.hpp  patientsearchwindow.cpp  patientsearchwindow.hpp  referrallistwindow.cpp  referrallistwindow.hpp  searchresults.cpp  searchresults.hpp
src/file/: datafile.hpp  dataobject.cpp  dataobject.hpp
src/models/: searchdoctorbyfullname.cpp  searchdoctorbyfullname.hpp  searchdoctorbypost.cpp  searchdoctorbypost.hpp  searchpatientbyfullname.cpp  searchpatientbyfullname.hpp  searchpatientbyregid.cpp  searchpatientbyregid.hpp
test/: testStack.cpp  testbintree.cpp  testdatabase.cpp  testdatafile.cpp  testdataobject.cpp  testdoctor.cpp  testhashtable.cpp  testpatient.cpp  testpatienthashfunction.cpp  testpatienthashtable.cpp  testreferral.cpp  testtwowaylist.cpp  testutils.cpp
